# PTA-ciencia-de-dados-equipe-Julia

./: README.md  ingest.py  main.py  my_os.db  my_os.py  pyproject.toml  test.py  teste.py  teste2.py  teste_final.py
agent-ui/: package-lock.json
ai_agent/: knowledge.py  playground.py
ai_agent/tmp/lancedb/produtos_knowledge.lance/_transactions/: 0-301a65c1-8ebc-4b4d-a807-4625feadcc22.txn
app/: knowledge.py
app/agents/: __init__.py  agente1.py  agente2.py  dummy.py  electronics.py  home_kitchen.py  team.py
app/scripts/: reindex.py  test_home_search.py
app/tools/: ferramenta1.py  listar_modelos.py
tmp/: data.db
